--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.protect7.authanalyzer</groupId>
 	<artifactId>AuthAnalyzer</artifactId>
-	<version>1.1.0</version>
+	<version>1.1.2</version>
 	<description>Burp Extension</description>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
@@ -36,6 +36,11 @@
 				</executions>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<directory>resources</directory>
+			</resource>
+		</resources>
 	</build>
 	<dependencies>
 
