--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.oxff.myAuthanalyzer</groupId>
 	<artifactId>myAuthAnalyzer</artifactId>
-	<version>1.3.0</version>
+	<version>1.4.1</version>
 	<description>Burp Extension</description>
 	<properties>
 			<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,7 +38,7 @@
 						</goals>
 					</execution>
 				</executions>
-			</plugin>
+			</plugin><plugin><groupId>org.apache.maven.plugins</groupId><artifactId>maven-compiler-plugin</artifactId><configuration><source>8</source><target>8</target></configuration></plugin>
 		</plugins>
 		<resources>
 			<resource>
